Fix tabs scrolling when not overflowing

--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -20,7 +20,7 @@
   padding-top: 4px;
   display: flex;
   min-width: 100%;
-  overflow-x: scroll;
+  overflow: scroll hidden;
 }
 
 .tab {
